# process_tracker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/process_tracker/: __init__.py  app.py  cli.py  main.py
src/process_tracker/automation/: __init__.py  rules.py
src/process_tracker/core/: __init__.py  async_utils.py  asyncio_tools.py  config.py  di.py  events.py  logging.py  provider.py  security.py
src/process_tracker/core/blueprints/: __init__.py  compile.py  definitions.py  store.py
src/process_tracker/core/forms/: __init__.py  schemas.py  validators.py
src/process_tracker/core/workflow/: __init__.py  engine.py  models.py
src/process_tracker/db/: __init__.py  bootstrap.py  engine.py  migrations.py  models.py  models_meta.py  seed.py  session.py  sync.py  types.py
src/process_tracker/db/dal/: __init__.py  base.py  permission_repo.py  process_repo.py  role_repo.py  task_repo.py  user_repo.py
src/process_tracker/routes/: __init__.py  _deps.py  attachments.py  audit.py  auth.py  events.py  files.py  forms.py  process_types.py  processes.py  rate_limit.py  task_types.py  tasks.py  templates.py  users.py  views.py  webhooks.py  workflows.py  ws.py
src/process_tracker/security/: __init__.py  auth.py  jwt.py  rbac.py
src/process_tracker/server/: __init__.py
src/process_tracker/services/: forms_service.py  process_service.py  task_service.py  workflow_service.py
src/process_tracker/ui/: __init__.py  asyncio_tools.py  auth.py  hotkeys.py  router.py  shell.py  state.py
src/process_tracker/ui/components/: __init__.py  button.py  (+12 more)
(+19 files in other folders)
